--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
-NODE_ENV = development
+NODE_ENV = production
 USER= rapheal_james
 DATABASE_PASSWORD=1Jahblessraph
 DATABASE=mongodb+srv://rapheal:<PASSWORD>@cluster0.rw7typu.mongodb.net/curve_portal?retryWrites=true
