--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
+        "exceljs": "^4.4.0",
         "express": "^4.19.2",
         "express-mongo-sanitize": "^2.2.0",
         "express-rate-limit": "^7.4.0",
@@ -22,6 +23,7 @@
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.5.1",
         "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.14",
         "slugify": "^1.6.6",
         "validator": "^13.12.0",
