--- a/config.env
+++ b/config.env
@@ -2,7 +2,7 @@ NODE_ENV = production
 USER= rapheal_james
 DATABASE_PASSWORD=1Jahblessraph
 DATABASE=mongodb+srv://rapheal:<PASSWORD>@cluster0.rw7typu.mongodb.net/curve_portal?retryWrites=true
-PORT=3001
+PORT=3000
 JWT_SECRET=id_towns_canada_sun_snows_rain_storms
 JWT_EXPIRES_IN=90d
 JWT_COOKIE_EXPIRES_IN=90
@@ -13,3 +13,9 @@ EMAIL_HOST=sandbox.smtp.mailtrap.io
 EMAIL_PORT=2525
 MAIL_ID=raphealjunior07@gmail.com 
 MAIL_PASSWORD=1Jahblessraph
+
+HASH_KEY=id_towns_canada_sun_snows_rain_s
+PRIVATE_KEY=id_towns_canada_sun_snows_rain_s
+
+
+FRONTEND_URL='http://localhost:5173'
