--- a/package.json
+++ b/package.json
@@ -11,22 +11,33 @@
     "author": "Rapheal James",
     "license": "ISC",
     "dependencies": {
+        "@simplewebauthn/server": "^11.0.0",
+        "@tensorflow/tfjs": "^4.22.0",
+        "@tensorflow/tfjs-backend-cpu": "^4.22.0",
+        "@tensorflow/tfjs-backend-webgl": "^4.22.0",
         "bcryptjs": "^2.4.3",
+        "body-parser": "^1.20.3",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "exceljs": "^4.4.0",
-        "express": "^4.19.2",
+        "express": "^4.21.1",
         "express-mongo-sanitize": "^2.2.0",
         "express-rate-limit": "^7.4.0",
         "helmet": "^7.1.0",
         "hpp": "^0.2.3",
+        "install": "^0.13.0",
         "jsonwebtoken": "^9.0.2",
-        "mongoose": "^8.5.1",
+        "mime-types": "^2.1.35",
+        "mongoose": "^8.8.1",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.14",
+        "npm": "^10.9.1",
+        "request": "^2.88.2",
         "slugify": "^1.6.6",
+        "uuid": "^11.0.3",
         "validator": "^13.12.0",
+        "xlsx": "^0.18.5",
         "xss-clean": "^0.1.4"
     },
     "devDependencies": {
