--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "Backend  for Curve Portal",
     "main": "app.js",
     "scripts": {
-        "start": "nodemon server.js",
-        "start:prod": "cross-env NODE_ENV=production nodemon server.js",
+        "start": "node server.js",
+        "start:dev": "nodemon server.js",
         "debug": "ndb server.js"
     },
     "author": "Rapheal James",
