--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 NODE_ENV = production
 USER= rapheal_james
 DATABASE_PASSWORD=1Jahblessraph
-DATABASE=mongodb+srv://rapheal:<PASSWORD>@cluster0.rw7typu.mongodb.net/curve_portal?retryWrites=true
+DATABASE=mongodb+srv://rapheal:<PASSWORD>@cluster0.rw7typu.mongodb.net/curve_portal_prod?retryWrites=true
 PORT=3000
 JWT_SECRET=id_towns_canada_sun_snows_rain_storms
 JWT_EXPIRES_IN=90d
